--- a/public/style.css
+++ b/public/style.css
@@ -3,10 +3,12 @@ body {
     background-color: #f3f3f3;
     text-align: center;
     padding: 50px;
+    ba
   }
   
   form {
     background-color: white;
+  
     padding: 20px;
     display: inline-block;
     border-radius: 10px;
