enable add staff and view staff of admin module

--- a/views/addMenu.ejs
+++ b/views/addMenu.ejs
@@ -62,7 +62,7 @@
         <input type="file" class="form-control-file" name="image" required>
       </div>
 
-      <button type="submit" class="btn btn-orange btn-block">Add Menu</button>
+      <button type="submit" class="btn btn-success btn-block">Add Menu</button>
     </form>
   </div>
 </body>
