--- a/views/register.ejs
+++ b/views/register.ejs
@@ -80,7 +80,7 @@
               type="text"
               class="form-control"
               id="newusername"
-              name="newusername"
+              name="username"
               required
             />
           </div>
