--- a/views/home.ejs
+++ b/views/home.ejs
@@ -266,8 +266,15 @@
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-danger fw-bold" href="/signin">Login</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-danger fw-bold" href="#" id="loginDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Login
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="loginDropdown">
+                <li><a class="dropdown-item" href="/signin?role=admin">Login as Admin</a></li>
+                <a href="/stafflogin" class="dropdown-item">Login as Staff</a>
+              </ul>
             </li>
           </ul>
         </div>
