--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,14 +38,16 @@
             <h3 class="text-center mb-4">Login</h3>
             <form action="/validate" method="POST">
               <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
+                <label for="username" class="form-label"
+                  >Username or Email</label
+                >
                 <input
                   type="text"
                   class="form-control"
                   id="username"
                   name="username"
                   required
-                  placeholder="Enter username"
+                  placeholder="Enter username or email"
                 />
               </div>
               <div class="mb-3">
@@ -75,9 +77,9 @@
       </div>
     </div>
     <% if (msg) { %>
-      <div class="alert alert-danger text-center"><%= msg %></div>
+    <div class="alert alert-danger text-center"><%= msg %></div>
     <% } %>
-    
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
