--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
+    <link rel="stylesheet" href="../src/validations/registerValidation.js">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -91,9 +92,18 @@
               class="form-control"
               id="password"
               name="password"
-              minlength="6"
+             
               required
             />
+          </div>
+          <div class="mb-3">
+            <label for="role" class="form-label">Role</label>
+            <select class="form-control" id="role" name="role" required>
+              <option value="">Select Role</option>
+              <option value="Admin">Admin</option>
+              
+              
+            </select>
           </div>
           <button type="submit" class="btn btn-primary w-100">Register</button>
         </form>
