--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -93,7 +93,13 @@
     <a href="/orders"><i class="fa-solid fa-receipt"></i> Orders</a>
     <a href="/bills"><i class="fa-solid fa-file-invoice-dollar"></i> Bills</a>
     <a href="/reports"><i class="fa-solid fa-chart-line"></i> Reports</a>
+    <div class="px-3 mt-4">
+      <a href="/logout" class="btn btn-danger w-100 d-flex align-items-center justify-content-center rounded">
+        <i class="fa-solid fa-right-from-bracket me-2"></i> Logout
+      </a>
+    </div>
   </nav>
+  
 
   <!-- Bootstrap JS for dropdown/collapse -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
