done the staff dashboard and logout button added in dashboard

--- a/views/staffDashboard.ejs
+++ b/views/staffDashboard.ejs
@@ -156,13 +156,14 @@
     </div>
 
     <nav class="nav">
-      <a href="#" class="active"><i class="fa-solid fa-house"></i>Dashboard</a>
-      <a href="#"><i class="fa-solid fa-chair"></i>Dining Tables</a>
-      <a href="#"><i class="fa-solid fa-utensils"></i>Menus</a>
-      <a href="#"><i class="fa-solid fa-receipt"></i>View Orders</a>
-      <a href="#"><i class="fa-solid fa-chart-column"></i>Reports</a>
-      <button class="btn-logout mt-4"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</button>
-    </nav>
+  <a href="/staffvalidate" class="active"><i class="fa-solid fa-house"></i>Dashboard</a>
+  <a href="/viewDiningTables"><i class="fa-solid fa-chair"></i>Dining Tables</a>
+  <a href="/viewMenus"><i class="fa-solid fa-utensils"></i>Menus</a>
+  <a href="/viewOrders"><i class="fa-solid fa-receipt"></i>View Orders</a>
+  <a href="/viewReports"><i class="fa-solid fa-chart-column"></i>Reports</a>
+  <a href="/logout" class="btn-logout mt-4"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a>
+</nav>
+
   </aside>
 
   <!-- ============= Main Content ============= -->
